--- a/assets/css/collapsible.css
+++ b/assets/css/collapsible.css
@@ -1,3 +1,14 @@
+body{
+  font-family: 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+}
+
+h1{
+  position: relative;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid var(--color-border);
+}
+
 .vertical-menu{
   position:fixed;
   top:0px;
@@ -14,7 +25,18 @@
 
 .right-content{
   float: right;
-  justify-content: center;
+  width: 66%;
+  background-color: rgb(255, 255, 255);
+  height: 97vh;
+  overflow-y: auto;
+}
+
+.item-image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  width: 100%;
 }
 
 .region {
@@ -67,7 +89,7 @@
   background-color: var(--color-accent);
 }
 
-.wine{
+.item{
     display: none;
     width: 100%;
     padding: .3rem;
@@ -82,7 +104,7 @@
     cursor: default;
     outline: none;
 }
-.wine:active, .wine:hover {
+.item:active, .item:hover {
   background-color: rgb(197, 253, 151);
 }
 .content {
