--- a/assets/css/collapsible.css
+++ b/assets/css/collapsible.css
@@ -45,7 +45,9 @@ h1{
     display: block;
     width: 100%;
     padding: .3rem;
-    padding-left: 2rem;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     line-height: 2;
     text-align: left;
     font: inherit;
@@ -59,6 +61,9 @@ h1{
 .active, .region:hover {
   background-color: rgb(197, 253, 151);
 }
+.region:focus:not(.is-selected) {
+  background-color: hsla(0,0%,0%,.1);
+}
 .content {
   padding: 0 18px;
   display: none;
@@ -70,7 +75,9 @@ h1{
     display: none;
     width: 100%;
     padding: .3rem;
-    padding-left: calc(2rem + 16px + .5rem); /* padding + icon + magic */
+    padding-left: calc(16px + 1rem); /* padding + icon + magic */
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     line-height: 2;
     text-align: left;
     font: inherit;
@@ -95,7 +102,9 @@ h1{
     display: none;
     width: 100%;
     padding: .3rem;
-    padding-left: calc(4rem + 16px + .5rem);;
+    padding-left: calc(16px + 2rem);;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     line-height: 2;
     text-align: left;
     font: inherit;
@@ -108,6 +117,9 @@ h1{
 }
 .item:active, .item:hover {
   background-color: rgb(197, 253, 151);
+}
+.item:focus:not(.is-selected) {
+  background-color: hsla(0,0%,0%,.1);
 }
 .content {
   padding: 0 18px;
