--- a/assets/css/collapsible.css
+++ b/assets/css/collapsible.css
@@ -29,6 +29,7 @@ h1{
   background-color: rgb(255, 255, 255);
   height: 97vh;
   overflow-y: auto;
+  text-align: center;
 }
 
 .item-image{
@@ -127,7 +128,6 @@ h1{
   overflow: hidden;
   background-color: #f1f1f1;
 }
-
 
 .nav-button-2 {
   display: block;
